// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component disabled Button 1`] = `
<button
  className="sc-iwsKbI gGrMdL"
  disabled={true}
>
  TEST
</button>
`;

exports[`Button component disabledClassName prop 1`] = `
<button
  className="sc-iwsKbI gGrMdL DISABLED_CLASS"
  disabled={true}
>
  TEST
</button>
`;

exports[`Button component recieves className 1`] = `
<button
  className="sc-iwsKbI gGrMdL TEST_CLASS"
  disabled={false}
>
  TEST
</button>
`;

exports[`Button component renders children 1`] = `
<button
  className="sc-iwsKbI gGrMdL"
  disabled={false}
>
  TEST
</button>
`;
